--- a/index_template_working.html
+++ b/index_template_working.html
@@ -79,6 +79,42 @@
                         <span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
 
                     </a>
+                    <h2>Highlights</h2>
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td></td>
+                                <td align="left" valign="middle" colspan="2">
+                                    <b>ThirdEye</b>: Technique that uses Attention Maps --Explainable AI technique-- for anomaly detection in Autonomous Driving Systems.
+                                    <br>[<a href="publications/stoccoETAL_ASE22.pdf" target="_blank">ASE'22 paper</a>, <a href="https://github.com/tsigalko18/ase22" target="_blank">data+simulator</a>]
+                                </td>
+                                <td align="right" valign="middle" colspan="1">
+                                    &nbsp;&nbsp;&nbsp;&nbsp;
+                                    <a href="" target="_blank">
+                                        <img src="images/avatar.jpeg" alt="ThirdEye" height="200">
+                                    </a>
+                                </td>
+                            </tr>
+
+                            <!-- new row -->
+                            <tr>
+                                <td></td>
+                                <td align="left" valign="middle" style="width:16%" colspan="2">
+                                    <b>SpecFuzzer</b>: Technique to synthesize test oracles using grammar-based fuzzing, likely invariant detection, and mutation testing.<br>[<a href="publications/Molina_ETAL_ICSE2022.pdf" target="_blank">ICSE'22 paper</a>,
+                                    <a href="https://sites.google.com/view/specfuzzer" target="_blank">tool</a>, <a href="https://www.youtube.com/watch?v=L41r9wrtD5w&amp;t=1945s" target="_blank">video</a>]
+                                </td>
+
+                                <td align="right" valign="middle" colspan="1">
+                                    &nbsp;&nbsp;&nbsp;&nbsp;
+                                    <img src="images/avatar.jpeg" alt="ThirdEye" height="200">
+                                </td>
+
+                            </tr>
+
+
+
+                        </tbody>
+                    </table>
                 </section>
             </article>
             <!--------------------------News----------------------------------------------------------------------------------------->
@@ -230,7 +266,6 @@
                     <div class="content">
                         <h3>Reviewers and PC Members:</h3>
                         <ul>
-                            <li>Research Track, ASE 2024</li>
                             <li>Transactions on Software Engineering</li>
                             <li>Journal of Systems & Software</li>
                             <li>Junior PC-Track, MSR 2024</li>
