--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
                 <header>
 
                     <h2>About Me</h2>
-                    <p>I am currently a research fellow at <a href="http://www.se.fudan.edu.cn/">Software Engineering Lab</a>, Fudan University. I obtained my PhD from Fudan University in 2022, supervised by <a href="https://cspengxin.github.io/">Prof. Xin Peng</a>                        and <a href="https://chenbihuan.github.io/">Prof. Bihuan Chen</a>. My research interests focus on software engineering, OSS supply chain and software evolution.
-                        <!-- Here is my <a href="kaifeng_resume.pdf">CV.</a> -->
+                    <p>Kaifeng Huang is an Assistant Professor at School of Software Engineering, Tongji Unversity. Prior to that, he was a research fellow at Software Engineering Lab, Fudan University. He obtained his PhD from Fudan University in 2022,
+                        supervised by <a href="https://cspengxin.github.io/">Prof. Xin Peng</a> and <a href="https://chenbihuan.github.io/">Prof. Bihuan Chen</a>. His research interests focus on open source software supply chain, software security and
+                        software evolution.</p>
+
                 </header>
 
                 <div class="pic">
@@ -93,6 +95,11 @@
                 <div class="row">
                     <div class="content">
                         <ul>
+                            <li>
+                                <p><span class="mydate"><strong>[2024.02]&nbsp;</strong></span>I have joined Tongji University as an Assitant Professor!</p>
+                                <p></p>
+                            </li>
+
                             <li>
                                 <p><span class="mydate"><strong>[2023.12]&nbsp;</strong></span>Our paper titled "Enhancing Field Tracking and Interprocedural Analysis to Find More Null Pointer Exceptions" is accepted by SANER 2024.</p>
                                 <p></p>
