--- a/index_template.html
+++ b/index_template.html
@@ -50,7 +50,7 @@
                 <hr class="rounded">
                 <header>
 
-                    <h2>About Me</h2>
+                    <h2>About</h2>
                     <p>Kaifeng Huang is an Assistant Professor at School of Software Engineering, Tongji Unversity. Prior to that, he was a research fellow at Software Engineering Lab, Fudan University. He obtained his PhD from Fudan University in 2022,
                         supervised by <a href="https://cspengxin.github.io/">Prof. Xin Peng</a> and <a href="https://chenbihuan.github.io/">Prof. Bihuan Chen</a>. His research interests focus on open source software supply chain, software security and
                         software evolution.</p>
