--- a/index.html
+++ b/index.html
@@ -284,11 +284,11 @@
                         <dl class="alt">
                             <!-- <img src="images/location.svg" style="width:50px;height:50px;" alt=""> -->
                             <!-- <h2 >Address:</h2> -->
-                            <b>Address:</b> No. 2005 Songhu Rd, Shanghai, China
+                            <b>Address:</b> No. 4800, Caoan highway, Shanghai, China
                             <br>
                             <!-- <img src="images/mail.svg" style="width:44px;height:44px;" alt=""> -->
                             <!-- <h2>Mail:</h2> -->
-                            <b>Mail:</b> kaifenghuang[AT]fudan[DOT]edu[DOT]cn
+                            <b>Mail:</b> kaifengh[AT]tongji[DOT]edu[DOT]cn
                         </dl>
                         <dl class="contact-icons color1">
                             <!-- <h2>Links:</h2> -->
