--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 <li><p><b><font size="3" color="#0b5394">[ICSE'24]</font></b> <strong>Identifying Affected Libraries and Their Ecosystems for Open Source Software Vulnerabilities.</strong><br> Susheng Wu, Wenyan Song, <u>Kaifeng Huang*</u>, Bihuan Chen*, Xin Pen.<em>&nbsp;In Proceedings of the 46th IEEE/ACM International Conference on Software Engineering, Lisbon, Portugal, to appear, 2024.</em></p></li>
 <li><p><b><font size="3" color="#0b5394">[FSE'23]</font></b> <strong>Demystifying Dependency Bugs in Deep Learning Stack.</strong><br> <u>Kaifeng Huang</u>, Bihuan Chen*, Susheng Wu, Junmin Cao, Lei Ma, Xin Peng.<em>&nbsp;In Proceedings of the 31st ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, San Francisco, California, United States, pp. 450-462, 2023.</em></p></li>
 <li><p><b><font size="3" color="#0b5394">[ICSME'23]</font></b> <strong>Characterizing the Complexity and Its Impact on Testing in ML-Enabled Systems - A Case Study on Rasa.</strong><br> Junming Cao, Bihuan Chen*, Longjie Hu, Jie Gao, <u>Kaifeng Huang</u>, Xin Peng.<em>&nbsp;In Proceedings of the 39th IEEE International Conference on Software Maintenance and Evolution, Bogotá, Colombia, pp. 258-270, 2023.</em></p></li>
-<li><p><b><font size="3" color="#0b5394">[FSE'22]</font></b> <strong>Tracking Patches for Open Source Software Vulnerabilities.</strong><br> Congying Xu, Bihuan Chen*, Chenhao Lu, <u>Kaifeng Huang</u>, Xin Peng, Yang Liu.<em>&nbsp;In Proceedings of the 30th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, Sacramento, California, United States, pp.  860–871, 2022.</em></p></li>
+<li><p><b><font size="3" color="#0b5394">[FSE'22]</font></b> <strong>Tracking Patches for Open Source Software Vulnerabilities.</strong><br> Congying Xu, Bihuan Chen*, Chenhao Lu, <u>Kaifeng Huang</u>, Xin Peng, Yang Liu.<em>&nbsp;In Proceedings of the 30th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, Singapore, pp.  860–871, 2022.</em></p></li>
 <li><p><b><font size="3" color="#0b5394">[EMSE'22]</font></b> <strong>Characterizing Usages, Updates and Risks of Third-party Libraries in Java Projects.</strong><br> <u>Kaifeng Huang</u>, Bihuan Chen*, Congying Xu, Ying Wang, Bowen Shi, Xin Peng, Yijian Wu, Yang Liu.<em>&nbsp;Empirical Software Engineering,  27.4:90, 2022.</em></p></li>
 <li><p><b><font size="3" color="#0b5394">[ASE'21]</font></b> <strong>REPFINDER: Finding Replacements for Missing APIs in Library Update.</strong><br> <u>Kaifeng Huang</u>, Bihuan Chen*, Linghao Pan, Shuai Wu, Xin Peng.<em>&nbsp;In Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering, Melbourne, Australia, pp. 266-278, 2021.</em></p></li>
 <li><p><b><font size="3" color="#0b5394">[FSE'20]</font></b> <strong>Interactive, Effort-aware Library Version Harmonization.</strong><br> <u>Kaifeng Huang</u>, Bihuan Chen*, Bowen Shi, Ying Wang, Congying Xu, Xin Peng.<em>&nbsp;In Proceedings of the 28th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, Singapore, pp. 518-529, 2020.</em></p></li>
@@ -359,3 +359,7 @@
 </body>
 
 </html>
+
+
+
+<!-- <i class="fa fa-file-pdf-o" style="color:FireBrick"></i> -->
