--- a/index.html
+++ b/index.html
@@ -144,16 +144,27 @@
                     <div class="content">
                         <ul>
                             <li>
+                                <p><span class="mydate"><strong>[2024.03]&nbsp;</strong></span>I was invited to serve on the program committee of the Research Track at <a href="https://2024.aiwareconf.org/track/aiware-2024-challenge-track ">AIWare 2024 Challenge Track</a>.</p>
+                                <p></p>
+                            </li>
+                            <li>
+                                <p><span class="mydate"><strong>[2024.03]&nbsp;</strong></span>I was invited to serve on the program committee of the Research Track at <a href="https://issre.github.io/2024/">ISSRE 2024</a>.</p>
+                                <p></p>
+                            </li>
+                            <li>
                                 <p><span class="mydate"><strong>[2024.02]&nbsp;</strong></span>I have joined <a href="https://en.tongji.edu.cn/p/#/">Tongji University</a> as an Assitant Professor!</p>
                                 <p></p>
                             </li>
 
                             <li>
-                                <p><span class="mydate"><strong>[2023.12]&nbsp;</strong></span>Our paper titled "Enhancing Field Tracking and Interprocedural Analysis to Find More Null Pointer Exceptions" is accepted by <a href="https://conf.researchr.org/home/saner-2024">SANER 2024</a>.</p>
+                                <p><span class="mydate"><strong>[2023.12]&nbsp;</strong><img src="images/new.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Enhancing Field Tracking and Interprocedural Analysis to Find More Null Pointer
+                                    Exceptions" is accepted by <a href="https://conf.researchr.org/home/saner-2024">SANER 2024</a>.
+                                </p>
                                 <p></p>
                             </li>
                             <li>
-                                <p><span class="mydate"><strong>[2023.12]&nbsp;</strong></span>Our paper titled "Identifying Affected Libraries and Their Ecosystems for Open Source Software Vulnerabilities" is accepted by <a href="https://conf.researchr.org/home/icse-2024">ICSE 2024</a>.</p>
+                                <p><span class="mydate"><strong>[2023.12]&nbsp;</strong><img src="images/new.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Identifying Affected Libraries and Their Ecosystems for Open Source Software
+                                    Vulnerabilities" is accepted by <a href="https://conf.researchr.org/home/icse-2024">ICSE 2024</a>.</p>
                                 <p></p>
                             </li>
                             <li>
@@ -305,7 +316,7 @@
                             <b>Address:</b> Room 408, No. 4800, Caoan highway, Shanghai, China.
                         </dl>
                         <dl class="alt">
-                            <b>Mail:</b> kaifengh<img src="images/tongjimail.png" style="width:112px;height:20px;" alt=""></a>
+                            <b>Mail:</b> kaifengh<img src="images/tongjimail.png" style="width:112px;height:17px;" alt=""></a>
                         </dl>
                         <dl class="contact-icons color1">
                             <!-- <h2>Links:</h2> -->
