--- a/index_template.html
+++ b/index_template.html
@@ -144,6 +144,11 @@
                     <div class="content">
                         <ul>
                             <li>
+                                <p><span class="mydate"><strong>[2024.05]&nbsp;</strong></span>Our paper titled "Detecting Incompatible Third-Party Library APIs in Python Based on Static Analysis" is accepted by <a href="http://www.jos.org.cn">JOS</a>.
+                                </p>
+                                <p></p>
+                            </li>
+                            <li>
                                 <p><span class="mydate"><strong>[2024.03]&nbsp;</strong></span>I was invited to serve on the program committee of the Research Track at <a href="https://2024.aiwareconf.org/track/aiware-2024-challenge-track ">AIWare 2024 Challenge Track</a>.</p>
                                 <p></p>
                             </li>
@@ -264,10 +269,11 @@
                     <div class="content">
                         <h3>Reviewers and PC Members:</h3>
                         <ul>
+                            <li>ACM Transactions on Software Engineering and Methodology</li>
                             <li>AIWare Challenge, 2024</li>
                             <li>Research Track, ISSRE 2024</li>
                             <li>Research Track, ASE 2024</li>
-                            <li>Transactions on Software Engineering</li>
+                            <li>IEEE Transactions on Software Engineering</li>
                             <li>Journal of Systems & Software</li>
                             <li>Junior PC-Track, MSR 2024</li>
                             <li>Science of Computer Programming</li>
