--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
                     <div class="content">
                         <ul>
                             <li>
-                                <p><span class="mydate"><strong>[2024.05]&nbsp;</strong></span>Our paper titled "Detecting Incompatible Third-Party Library APIs in Python Based on Static Analysis" is accepted by <a href="http://www.jos.org.cn">JOS</a>.
+                                <p><span class="mydate"><strong>[2024.05]&nbsp;</strong><img src="images/new.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Detecting Incompatible Third-Party Library APIs in Python Based on Static Analysis"
+                                    is accepted by <a href="http://www.jos.org.cn">JOS</a>.
                                 </p>
                                 <p></p>
                             </li>
