--- a/index.html
+++ b/index.html
@@ -144,6 +144,12 @@
                     <div class="content">
                         <ul>
                             <li>
+                                <p><span class="mydate"><strong>[2024.07]&nbsp;</strong><img src="images/new.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Your "Notice" is Missing: Detecting and Fixing Violations of  Modification Terms in Open Source Licenses during Forking"
+                                    is accepted by <a href="https://2024.issta.org/track/issta-2024-papers">ISSTA 2024</a>.
+                                </p>
+                                <p></p>
+                            </li>
+                            <li>
                                 <p><span class="mydate"><strong>[2024.05]&nbsp;</strong><img src="images/new.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Detecting Incompatible Third-Party Library APIs in Python Based on Static Analysis"
                                     is accepted by <a href="http://www.jos.org.cn">JOS</a>.
                                 </p>
@@ -248,7 +254,8 @@
                     <div class="content">
                         <!-- <hr> -->
                         <ol>
-                            <li><p><b><font size="3" color="#0b5394">[JOS]</font></b> <strong>基于静态分析的Python第三方库API兼容性问题检测方法 (Detecting Incompatible Third-Party Library APIs in Python Based on Static Analysis).</strong><br> 沈阚, <u>黄凯锋</u>, 陈碧欢, 彭鑫.<em>&nbsp;软件学报（Journal of Software）,  to appear, 2024.</em></p></li>
+                            <li><p><b><font size="3" color="#0b5394">[ISSTA'24]</font></b> <strong>Your "Notice" is Missing: Detecting and Fixing Violations of  Modification Terms in Open Source Licenses during Forking.</strong><br> <u>Kaifeng Huang</u>, Yingfeng Xia, Bihuan Chen, Siyang He, Huazheng Zeng, Zhuotong Zhou, Jin Guo, Xin Peng.<em>&nbsp;In Proceedings of the 33rd ACM SIGSOFT International Symposium on Software Testing and Analysis, Vienna, Austria, to appear, 2024.</em></p></li>
+<li><p><b><font size="3" color="#0b5394">[JOS]</font></b> <strong>基于静态分析的Python第三方库API兼容性问题检测方法 (Detecting Incompatible Third-Party Library APIs in Python Based on Static Analysis).</strong><br> 沈阚, <u>黄凯锋</u>, 陈碧欢, 彭鑫.<em>&nbsp;软件学报（Journal of Software）,  to appear, 2024.</em></p></li>
 <li><p><b><font size="3" color="#0b5394">[SANER'24]</font></b> <strong>Enhancing Field Tracking and Interprocedural Analysis to Find More Null Pointer Exceptions.</strong><br> Dongfang Xie, Bihuan Chen, <u>Kaifeng Huang</u>, Yu Wang, Linghao Pan, Zhicheng Chen, Xin Peng.<em>&nbsp;In Proceedings of the 31st IEEE International Conference on Software Analysis, Evolution and Reengineering, Rovaniemi, Finland, to appear, 2024.</em></p></li>
 <li><p><b><font size="3" color="#0b5394">[ICSE'24]</font></b> <strong>Identifying Affected Libraries and Their Ecosystems for Open Source Software Vulnerabilities.</strong><br> Susheng Wu, Wenyan Song, <u>Kaifeng Huang</u>, Bihuan Chen, Xin Pen.<em>&nbsp;In Proceedings of the 46th IEEE/ACM International Conference on Software Engineering, Lisbon, Portugal, to appear, 2024.</em></p></li>
 <li><p><b><font size="3" color="#0b5394">[FSE'23]</font></b> <strong>Demystifying Dependency Bugs in Deep Learning Stack.</strong><br> <u>Kaifeng Huang</u>, Bihuan Chen, Susheng Wu, Junmin Cao, Lei Ma, Xin Peng.<em>&nbsp;In Proceedings of the 31st ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, San Francisco, California, United States, pp. 450-462, 2023.</em></p></li>
@@ -281,8 +288,9 @@
                 <section>
                     <div class="content">
                         <h3>Reviewers and PC Members:</h3>
-                        <ul>
+                        <ul> 
                             <li>ACM Transactions on Software Engineering and Methodology</li>
+                            <li>Journal of Software: Evolution and Process</li>
                             <li>AIWare Challenge, 2024</li>
                             <li>Research Track, ISSRE 2024</li>
                             <li>Research Track, ASE 2024</li>
