--- a/index_template.html
+++ b/index_template.html
@@ -144,6 +144,12 @@
                     <div class="content">
                         <ul>
                             <li>
+                                <p><span class="mydate"><strong>[2024.07]&nbsp;</strong><img src="images/new.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Your "Notice" is Missing: Detecting and Fixing Violations of  Modification Terms in Open Source Licenses during Forking"
+                                    is accepted by <a href="https://2024.issta.org/track/issta-2024-papers">ISSTA 2024</a>.
+                                </p>
+                                <p></p>
+                            </li>
+                            <li>
                                 <p><span class="mydate"><strong>[2024.05]&nbsp;</strong><img src="images/new.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Detecting Incompatible Third-Party Library APIs in Python Based on Static Analysis"
                                     is accepted by <a href="http://www.jos.org.cn">JOS</a>.
                                 </p>
@@ -269,8 +275,9 @@
                 <section>
                     <div class="content">
                         <h3>Reviewers and PC Members:</h3>
-                        <ul>
+                        <ul> 
                             <li>ACM Transactions on Software Engineering and Methodology</li>
+                            <li>Journal of Software: Evolution and Process</li>
                             <li>AIWare Challenge, 2024</li>
                             <li>Research Track, ISSRE 2024</li>
                             <li>Research Track, ASE 2024</li>
