--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </p>
                     <p>
                         His research interests focus on open source software supply chain, software security and software evolution. He serves in the reviewer panels and program committees of Transactions on Software Engineering, Journal of Systems & Software, ASE 2024, ISSRE
-                        2024, ISCE AE 2023, etc. He was the awardee of the ACM SIGSOFT Distinguished Paper Award at ASE 2018 and IEEE TCSE Distinguished Paper Award at ICSME 2020.
+                        2024, ICSE AE 2023, etc. He was the awardee of the ACM SIGSOFT Distinguished Paper Award at ASE 2018 and IEEE TCSE Distinguished Paper Award at ICSME 2020.
 
                         <!-- He has published ten peer-reviewed papers at top journals/conferences including ICSE, ESEC/FSE, ASE, EMSE, etc. -->
                     </p>
@@ -144,8 +144,8 @@
                     <div class="content">
                         <ul>
                             <li>
-                                <p><span class="mydate"><strong>[2024.07]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Your "Notice" is Missing: Detecting and Fixing Violations of  Modification Terms in Open Source Licenses during Forking"
-                                    is accepted by <a href="https://2024.issta.org/track/issta-2024-papers">ISSTA 2024</a>.
+                                <p><span class="mydate"><strong>[2024.07]&nbsp;</strong><img src="images/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Your "Notice" is Missing: Detecting and Fixing Violations of Modification Terms
+                                    in Open Source Licenses during Forking" is accepted by <a href="https://2024.issta.org/track/issta-2024-papers">ISSTA 2024</a>.
                                 </p>
                                 <p></p>
                             </li>
@@ -288,7 +288,7 @@
                 <section>
                     <div class="content">
                         <h3>Reviewers and PC Members:</h3>
-                        <ul> 
+                        <ul>
                             <li>ACM Transactions on Software Engineering and Methodology</li>
                             <li>Journal of Software: Evolution and Process</li>
                             <li>AIWare Challenge, 2024</li>
